freeze of first 90 pages

--- a/math_background/Equation_sheet.tex
+++ b/math_background/Equation_sheet.tex
@@ -27,6 +27,8 @@
 
 %\begin{document}
 \section*{Equation Sheet}
+All results below, unless overwise stated, refer to diploid individuals and
+autosomal loci. More general results are often given in the relevant sections.
 \begin{table*}[!htbp]
 % \begin{tabular}{llll}
  % \csvreader[separator=semicolon]{math_background/Equation_sheet.txt} 
