--- a/math_background/Math-background.tex
+++ b/math_background/Math-background.tex
@@ -95,7 +95,7 @@ We'll sometimes want to know about the  \emph{second derivative} of
 $f$, denoted by $f''(a)$ or $\frac{d^2f(a)}{d^2x}$. 
 The second
 derivative measures the rate at which the first derivative is changing
-i.e. the concavity/convexity of the function. See Figure \ref{Fig:2nd_derivative}.
+i.e. the concavity/convexity of the function. See Figure \ref{Fig:derivative}.
 % \begin{figure}
  %\begin{center}
   % \includegraphics[width=0.7 \textwidth]{math_background/calc_pics/2nd_Derivat.pdf}\end{center}
@@ -188,7 +188,8 @@ One place this second order approximation is useful is for the $\log$ function a
 \subsection{Integrals} Regarding  \emph{integrals} $\int_a^b f(x)\,dx$, just remember that
 they represent the \emph{signed area} ``under'' the graph of $y=f(x)$
 over the interval $[a,b]$. %It's often helpful to think about an
-%integral as 
+% integral as
+% https://twitter.com/fermatslibrary/status/901428083395354625  integral symbol ∫ introduced in 1675 was based on the ſ (long S) character, and was chosen because Leibniz thought of it as an ∞ sum
 The integral is found by taking the limit of the summed area under the curve in each bin $dx$ as the
 bin size goes to zero. An example is shown in Figure
 \ref{Fig:Integral_eg}. 
@@ -296,7 +297,7 @@ we can now answer
 What is $ \P(\textrm{cat} | \textrm{dog})$?\\
 Explain the underlying intuition of your answer? \\
 \end{question}
-By rearranging eqn \eqref{eqn:cond_prob}, we obtain the rule that
+By rearranging eqn  , we obtain the rule that
 \begin{equation}
 \P(\textrm{A \& B}) = \P(\textrm{A} | \textrm{B}) \P(\textrm{B}) .
 \end{equation}
