--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -25,6 +25,61 @@
   publisher={Genetics Soc America}
 }
 
+
+
+
+@article{pybus2003epidemiology,
+  title={The epidemiology and iatrogenic transmission of hepatitis C virus in Egypt: a Bayesian coalescent approach},
+  author={Pybus, OG and Drummond, AJ and Nakano, T and Robertson, BH and Rambaut, A},
+  journal={Molecular biology and evolution},
+  volume={20},
+  number={3},
+  pages={381--387},
+  year={2003},
+  publisher={Oxford University Press}
+}
+
+@article{baranova2015extraordinary,
+  title={Extraordinary genetic diversity in a wood decay mushroom},
+  author={Baranova, Maria A and Logacheva, Maria D and Penin, Aleksey A and Seplyarskiy, Vladimir B and Safonova, Yana Y and Naumenko, Sergey A and Klepikova, Anna V and Gerasimov, Evgeny S and Bazykin, Georgii A and James, Timothy Y and others},
+  journal={Molecular biology and evolution},
+  volume={32},
+  number={10},
+  pages={2775--2783},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
+
+@InBook{soule1976allozyme,
+  chapter={Allozyme variation, its determinats in space and time},
+  author={Soul{\'e}, Michael E},
+  title={Moleculor Evolution},
+  pages={60--77},
+  year={1976},
+  publisher={Sinauer associates},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTtype = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTpages = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@article{soule1976allozyme,
+  chapter={Allozyme variation, its determinats in space and time},
+  author={Soul{\'e}, Michael E},
+  title={Moleculor Evolution},
+  pages={60--77},
+  year={1976},
+  publisher={Sinauer associates}
+}
+
 @article{hardy1908mendelian,
   title={Mendelian proportions in a mixed population},
   author={Hardy, Godfrey H and others},
@@ -33,6 +88,17 @@
   number={706},
   pages={49--50},
   year={1908}
+}
+
+@article{frankham1996relationship,
+  title={Relationship of genetic variation to population size in wildlife},
+  author={Frankham, Richard},
+  journal={Conservation biology},
+  volume={10},
+  number={6},
+  pages={1500--1508},
+  year={1996},
+  publisher={Wiley Online Library}
 }
 
 @article{weinberg1908ber,
@@ -1903,6 +1969,14 @@
   publisher={Nature Publishing Group}
 }
 
+@article{leroy2020endemic,
+  title={Endemic island songbirds as windows into evolution in small effective population sizes},
+  author={Leroy, Thibault and Rousselle, Marjolaine and Tilak, Marie-Ka and Caizergues, Aude and Scornavacca, Celine and Carrasco, Maria Recuerda and Fuchs, Jerome and Illera, Juan Carlos and De Swardt, Dawie H and Thebaud, Christophe and others},
+  journal={bioRxiv},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
 @article{hudson1987test,
   title={A test of neutral molecular evolution based on nucleotide data},
   author={Hudson, Richard R and Kreitman, Martin and Aguad{\'e}, Montserrat},
@@ -2914,6 +2988,83 @@ author = "David P.L. Toews and Scott A. Taylor and Rachel Vallender and Alan Bre
   OPTnote = 	 {},
   OPTannote = 	 {}
 }
+
+
+@article{gulick1873diversity,
+  title={On diversity of evolution under one set of external conditions.},
+  author={Gulick, John T},
+  journal={Journal of the Linnean Society of London, Zoology},
+  volume={11},
+  number={56},
+  pages={496--505},
+  year={1873},
+  publisher={Oxford University Press}
+}
+
+@Book{Hagedoorn,
+  author = 	 {Hagedoorn, A. L. and Hagedoorn, A. C.},
+  title = 	 {The relative value of the processes causing evolution},
+  publisher = 	 {The Hague,M. Nijhoff},
+  year = 	 {1921},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTaddress = 	 {},
+  OPTedition = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@article{fisher1923xxi,
+  title={On the dominance ratio},
+  author={Fisher, Ronald A},
+  journal={Proceedings of the royal society of Edinburgh},
+  volume={42},
+  pages={321--341},
+  year={1923},
+  publisher={Royal Society of Edinburgh Scotland Foundation}
+}
+
+@article{wright1931evolution,
+  title={Evolution in Mendelian populations},
+  author={Wright, Sewall},
+  journal={Genetics},
+  volume={16},
+  number={2},
+  pages={97},
+  year={1931},
+  publisher={Genetics Society of America}
+}
+
+@article{wahlund1928zusammensetzung,
+  title={Zusammensetzung von Populationen und Korrelationserscheinungen vom Standpunkt der Vererbungslehre aus betrachtet},
+  author={Wahlund, Sten},
+  journal={Hereditas},
+  volume={11},
+  number={1},
+  pages={65--106},
+  year={1928},
+  publisher={Wiley Online Library}
+}
+
+@book{hogben1933nature,
+  title={Nature and Nurture (Being the William Withering Memorial Lectures)},
+  author={Hogben, Lancelot},
+  year={1933},
+  publisher={George Allen and Unwin Limited, London}
+}
+
+
+@article{paul1984eugenics,
+  title={Eugenics and the Left},
+  author={Paul, Diane},
+  journal={Journal of the History of Ideas},
+  pages={567--590},
+  year={1984},
+  publisher={JSTOR}
+} 
 
 
 @article{leffler:12,
