freeze on the first 170 pages

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -7,6 +7,24 @@
   year={1978}
 }
 
+
+
+@Article{Fisher:1918,
+  author = 	 {Fisher, R. A.},
+  title = 	 {The correlation between relatives on the supposition of Mendelian inheritance},
+  journal = 	 { Trans. R. Soc.},
+  year = 	 {1918},
+  OPTkey = 	 {},
+  volume = 	 {52},
+  OPTnumber = 	 {},
+  pages = 	 {399–433},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+
+
 @book{hansen2013sterilized,
   title={Sterilized by the state: eugenics, race, and the population scare in twentieth-century North America},
   author={Hansen, Randall and King, Desmond},
@@ -54,7 +72,7 @@
 @InBook{soule1976allozyme,
   chapter={Allozyme variation, its determinats in space and time},
   author={Soul{\'e}, Michael E},
-  title={Moleculor Evolution},
+  title={Molecular Evolution},
   pages={60--77},
   year={1976},
   publisher={Sinauer associates},
@@ -71,14 +89,7 @@
   OPTannote = 	 {}
 }
 
-@article{soule1976allozyme,
-  chapter={Allozyme variation, its determinats in space and time},
-  author={Soul{\'e}, Michael E},
-  title={Moleculor Evolution},
-  pages={60--77},
-  year={1976},
-  publisher={Sinauer associates}
-}
+
 
 @article{hardy1908mendelian,
   title={Mendelian proportions in a mixed population},
@@ -191,7 +202,6 @@
   year={2005}, 
   publisher={Routledge},
   chapter = 	 {Ideology and method: RA Fisher and Research in Eugenics},
-  year = 	 {},
   OPTkey = 	 {},
   OPTvolume = 	 {},
   OPTnumber = 	 {},
@@ -969,6 +979,15 @@
   publisher={Oxford University Press}
 }
 
+@article{boag1983heritability,
+  title={The heritability of external morphology in Darwin's ground finches (Geospiza) on Isla Daphne Major, Galapagos},
+  author={Boag, Peter T},
+  journal={Evolution},
+  pages={877--894},
+  year={1983},
+  publisher={JSTOR}
+}
+
 @article{weis1990measuring,
   title={Measuring selection on reaction norms: an exploration of the Eurosta-Solidago system},
   author={Weis, Arthur E and Gorman, Wendy L},
@@ -982,7 +1001,7 @@
 
 @article{brodie1992correlational,
   title={Correlational selection for color pattern and antipredator behavior in the garter snake Thamnophis ordinoides},
-  author={Brodie III, Edmund D},
+  author={Brodie, Edmund D},
   journal={Evolution},
   volume={46},
   number={5},
@@ -2164,15 +2183,7 @@
   publisher={Academic Press}
 }
 
-@article{fisher1923xxi,
-  title={XXI.—on the dominance ratio},
-  author={Fisher, Ronald A},
-  journal={Proceedings of the royal society of Edinburgh},
-  volume={42},
-  pages={321--341},
-  year={1923},
-  publisher={Royal Society of Edinburgh Scotland Foundation}
-}
+
 
 @article{sattath2011pervasive,
   title={Pervasive adaptive protein evolution apparent in diversity patterns around amino acid substitutions in Drosophila simulans},
@@ -2987,6 +2998,26 @@ author = "David P.L. Toews and Scott A. Taylor and Rachel Vallender and Alan Bre
   OPTmonth = 	 {},
   OPTnote = 	 {},
   OPTannote = 	 {}
+}
+
+@article{lush1943animal,
+  title={Animal breeding plans.},
+  author={Lush, Jay Laurence},
+  journal={Animal breeding plans.},
+  number={Edn 2},
+  year={1943},
+  publisher={Iowa State College Press.}
+}
+
+@article{figueiro2017genome,
+  title={Genome-wide signatures of complex introgression and adaptive evolution in the big cats},
+  author={Figueir{\'o}, Henrique V and Li, Gang and Trindade, Fernanda J and Assis, Juliana and Pais, Fabiano and Fernandes, Gabriel and Santos, Sarah HD and Hughes, Graham M and Komissarov, Aleksey and Antunes, Agostinho and others},
+  journal={Science advances},
+  volume={3},
+  number={7},
+  pages={e1700299},
+  year={2017},
+  publisher={American Association for the Advancement of Science}
 }
 
 
