new version complete 2020

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -8,6 +8,17 @@
 }
 
 
+@article{kimura1962probability,
+  title={On the probability of fixation of mutant genes in a population},
+  author={Kimura, Motoo},
+  journal={Genetics},
+  volume={47},
+  number={6},
+  pages={713},
+  year={1962},
+  publisher={Genetics Society of America}
+}
+
 
 @Article{Fisher:1918,
   author = 	 {Fisher, R. A.},
@@ -196,6 +207,16 @@
   publisher={Cambridge University Press and Editions de la Maison des Sciences de l’Homme~…}
 }
 
+@article{haldane1924,
+  title={A mathematical theory of natural and artificial selection. Part I},
+  author={Haldane, John Burdon Sanderson},
+  journal={Transactions of the Camrbidge Philosophical Society},
+  volume={23},
+  pages={19-41},
+  year={1924},
+  publisher={}
+}
+
 @InBook{mazumdar2005eugenics_fisher,
   title={Eugenics, human genetics and human failings: the Eugenics Society, its sources and its critics in Britain},
   author={Mazumdar, Pauline},
@@ -316,7 +337,7 @@
 
 @article{stern2017california,
   title={California’s sterilization survivors: an estimate and call for redress},
-  author={Stern, Alexandra Minna and Novak, Nicole L and Lira, Natalie and O’Connor, Kate and Harlow, Siob{\'a}n and Kardia, Sharon},
+  author={Stern, Alexandra Minna and Novak, Nicole L and Lira, Natalie and O'Connor, Kate and Harlow, Siob{\'a}n and Kardia, Sharon},
   journal={American journal of public health},
   volume={107},
   number={1},
@@ -328,7 +349,7 @@
 
 @article{novak2018disproportionate,
   title={Disproportionate sterilization of Latinos under California’s eugenic sterilization program, 1920--1945},
-  author={Novak, Nicole L and Lira, Natalie and O’Connor, Kate E and Harlow, Siob{\'a}n D and Kardia, Sharon LR and Stern, Alexandra Minna},
+  author={Novak, Nicole L and Lira, Natalie and O'Connor, Kate E and Harlow, Siob{\' a}n D and Kardia, Sharon LR and Stern, Alexandra Minna},
   journal={American journal of public health},
   volume={108},
   number={5},
@@ -469,6 +490,24 @@
   publisher={Public Library of Science}
 }
 
+@techreport{stitzer2018maize,
+  title={Maize domestication and gene interaction},
+  author={Stitzer, Michelle C and Ross-Ibarra, Jeffrey},
+  year={2018},
+  institution={PeerJ Preprints}
+}
+
+@article{wang1999limits,
+  title={The limits of selection during maize domestication},
+  author={Wang, Rong-Lin and Stec, Adrian and Hey, Jody and Lukens, Lewis and Doebley, John},
+  journal={Nature},
+  volume={398},
+  number={6724},
+  pages={236--239},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+
 @article{tuttle2016divergence,
   title={Divergence and functional degradation of a sex chromosome-like supergene},
   author={Tuttle, Elaina M and Bergland, Alan O and Korody, Marisa L and Brewer, Michael S and Newhouse, Daniel J and Minx, Patrick and Stager, Maria and Betuel, Adam and Cheviron, Zachary A and Warren, Wesley C and others},
@@ -483,7 +522,7 @@
 
 @incollection{smith1971origin,
   title={The origin and maintenance of sex},
-  author={Smith, J Maynard},
+  author={Maynard Smith, J},
   ALTeditor = 	 {William, G.C.},
   booktitle={Group selection},
   pages={163--175},
@@ -836,6 +875,40 @@
   publisher={Elsevier}
 }
 
+@article{paul2008s,
+  title={“It's ok, we're not cousins by blood”: the cousin marriage controversy in historical perspective},
+  author={Paul, Diane B and Spencer, Hamish G},
+  journal={PLoS Biol},
+  volume={6},
+  number={12},
+  pages={e320},
+  year={2008},
+  publisher={Public Library of Science}
+}
+
+@article{helgason2008association,
+  title={An association between the kinship and fertility of human couples},
+  author={Helgason, Agnar and P{\'a}lsson, Sn{\ae}bj{\"o}rn and Gu{\dh}bjartsson, Dan{\'\i}el F and Stef{\'a}nsson, K{\'a}ri and others},
+  journal={Science},
+  volume={319},
+  number={5864},
+  pages={813--816},
+  year={2008},
+  publisher={American Association for the Advancement of Science}
+}
+
+@inproceedings{haldane1927mathematical,
+  title={A mathematical theory of natural and artificial selection, part V: selection and mutation},
+  author={Haldane, John Burdon Sanderson},
+  booktitle={Mathematical Proceedings of the Cambridge Philosophical Society},
+  volume={23},
+  number={7},
+  pages={838--844},
+  year={1927},
+  organization={Cambridge University Press}
+}
+
+
 @article{tao2007sex,
   title={A sex-ratio meiotic drive system in Drosophila simulans. I: an autosomal suppressor},
   author={Tao, Yun and Masly, John P and Araripe, Luciana and Ke, Yeyan and Hartl, Daniel L},
@@ -845,6 +918,39 @@
   pages={e292},
   year={2007},
   publisher={Public Library of Science}
+}
+
+@article{hamilton1967extraordinary,
+  title={Extraordinary sex ratios},
+  author={Hamilton, William D},
+  journal={Science},
+  volume={156},
+  number={3774},
+  pages={477--488},
+  year={1967},
+  publisher={Citeseer}
+}
+
+@article{cosmides1981cytoplasmic,
+  title={Cytoplasmic inheritance and intragenomic conflict},
+  author={Cosmides, Leda Murlas and Tooby, John},
+  journal={Journal of theoretical biology},
+  volume={89},
+  number={1},
+  pages={83--129},
+  year={1981},
+  publisher={Elsevier}
+}
+
+@article{frank1996mitochondria,
+  title={Mitochondria and male disease},
+  author={Frank, SA and Hurst, LD},
+  journal={Nature},
+  volume={383},
+  number={6597},
+  pages={224--224},
+  year={1996},
+  publisher={Nature Publishing Group}
 }
 
 @article{basolo1994dynamics,
@@ -860,7 +966,7 @@
 
 @book{smith1982evolution,
   title={Evolution and the Theory of Games},
-  author={Smith, John Maynard},
+  author={Maynard Smith, John},
   year={1982},
   publisher={Cambridge university press}
 }
@@ -1212,7 +1318,7 @@
 
 @article{van2011industrial,
   title={Industrial melanism in British peppered moths has a singular and recent mutational origin},
-  author={van’t Hof, Arjen E and Edmonds, Nicola and Dal{\'\i}kov{\'a}, Martina and Marec, Franti{\v{s}}ek and Saccheri, Ilik J},
+  author={van't Hof, Arjen E and Edmonds, Nicola and Dal{\' i}kov{\' a}, Martina and Marec, Franti{\v s}ek and Saccheri, Ilik J},
   journal={Science},
   volume={332},
   number={6032},
@@ -1841,7 +1947,7 @@
   publisher={Nature Publishing Group}
 }
 
-@Article{MaynardSmith:74,
+@Article{MaynardSmithHaigh74,
   author = 	 {Maynard Smith, J. and Haigh, J.},
   title = 	 {The hitch-hiking effect of a favourable gene},
   journal = 	 {Genet. Res.},
@@ -2228,16 +2334,6 @@
 }
 
 
-@inproceedings{haldane1927mathematical,
-  title={A mathematical theory of natural and artificial selection, part V: selection and mutation},
-  author={Haldane, John Burdon Sanderson},
-  booktitle={Mathematical Proceedings of the Cambridge Philosophical Society},
-  volume={23},
-  number={7},
-  pages={838--844},
-  year={1927},
-  organization={Cambridge University Press}
-}
 
 @article{kupper2016supergene,
   title={A supergene determines highly divergent male reproductive morphs in the ruff},
@@ -2596,7 +2692,7 @@ eprint = {
 
 @article{lek:16,
   title={Analysis of protein-coding genetic variation in 60,706 humans},
-  author={Lek, Monkol and Karczewski, Konrad J and Minikel, Eric V and Samocha, Kaitlin E and Banks, Eric and Fennell, Timothy and O’Donnell-Luria, Anne H and Ware, James S and Hill, Andrew J and Cummings, Beryl B and others},
+  author={Lek, Monkol and Karczewski, Konrad J and Minikel, Eric V and Samocha, Kaitlin E and Banks, Eric and Fennell, Timothy and O'Donnell-Luria, Anne H and Ware, James S and Hill, Andrew J and Cummings, Beryl B and others},
   journal={Nature},
   volume={536},
   number={7616},
