new version complete 2020. It is done...for now

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -216,7 +216,7 @@ true joy of descent with modification.
   Biology graduate group} core class (PBG200A) and Undergraduate Population and
   Quantitative Genetics class (EVE102) at UC Davis. Thanks to the many
   students who've read these notes and suggested improvements. Thanks
- to Simon Aeschbacher, Vince Buffalo, and Erin Calfee who read
+ to Simon Aeschbacher, Vince Buffalo, Erin Calfee, Michael Whitlock who read
  and extensively edited earlier drafts of these notes. To illustrate these notes, I've used old scientific and natural history illustrations, in part
  because they are out of copyright but mainly because they bring me
  joy. Many of the old images come from
