--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -9,6 +9,17 @@
   publisher={Oxford University Press}
 }
 
+@article{ilany2021rank,
+  title={Rank-dependent social inheritance determines social network structure in spotted hyenas},
+  author={Ilany, Amiyaal and Holekamp, Kay E and Ak{\c{c}}ay, Erol},
+  journal={Science},
+  volume={373},
+  number={6552},
+  pages={348--352},
+  year={2021},
+  publisher={American Association for the Advancement of Science}
+}
+
 @article{martin1978decay,
   title={Decay of Douglas-fir by Sparassis radicata in Arizona},
   author={Martin, KJ and Gilbertson, RL},
