resolved multi trait git conflict

--- a/popgen_notes.bib
+++ b/popgen_notes.bib
@@ -1,4 +1,13 @@
-
+@article{east2009maternal,
+  title={Maternal effects on offspring social status in spotted hyenas},
+  author={East, Marion L and H{\"o}ner, Oliver P and Wachter, Bettina and Wilhelm, Kerstin and Burke, Terry and Hofer, Heribert},
+  journal={Behavioral Ecology},
+  volume={20},
+  number={3},
+  pages={478--483},
+  year={2009},
+  publisher={Oxford University Press}
+}
 
 @article{martin1978decay,
   title={Decay of Douglas-fir by Sparassis radicata in Arizona},
